# imagen-mcp

./: .env.example  .gitignore  .pylintrc  ARCHITECTURE.md  CONTRIBUTING.md  PUBLISHING.md  README.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_mcp.py  run_server.py  run_with_venv.sh  server.json
.github/workflows/: extension-ci.yml
examples/: claude_code.mcp.json  claude_desktop_config.json
image_generator/: __init__.py  core.py  server.py
imagen_mcp/: __main__.py  core.py  server.py
mcp_server/: __init__.py  core.py  server.py
scripts/: add-to-claude-code.sh  publish-registry.sh
tests/: run_tests.sh  test_core.py
vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
vscode-extension/scripts/: bump-version.js  copy-server.js  sync-python.js
vscode-extension/server/: run_server.py
vscode-extension/server/image_generator/: core.py
vscode-extension/server/imagen_mcp/: __init__.py  server.py
vscode-extension/src/: extension.ts
