[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagen-mcp"
version = "1.0.0"
description = "Model Context Protocol server for Google AI image generation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vipin Ravindran"}
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "image-generation",
    "text-to-image",
    "gemini",
    "imagen",
    "google-ai",
    "nano-banana",
    "ai",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=2.0.0",
    "Pillow>=10.4.0",
    "pillow-heif>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/vipincr/imagen-mcp"
Repository = "https://github.com/vipincr/imagen-mcp"
Issues = "https://github.com/vipincr/imagen-mcp/issues"

[project.scripts]
imagen-mcp = "imagen_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pylint>=2.0.0",
]

[tool.setuptools]
packages = ["imagen_mcp"]

[tool.setuptools.package-data]
imagen_mcp = ["py.typed"]

